--- a/src/components/MainSearch.css
+++ b/src/components/MainSearch.css
@@ -1,9 +1,22 @@
+.mainsearch {
+    display:grid;
+    justify-content: center;
+    align-items: center;
+    background-color:lightgrey;
+    gap: .5rem;
+    border: 5px;
+    border-radius: 450%;
+}
+
+
 .characters-container {
         
         
-    margin-left: auto;
+    /* margin-left: auto;
     margin-right: auto;
     justify-content: center;
+    align-items: center;
+    display: grid; */
 
 }
 
@@ -28,16 +41,16 @@ text-decoration-line: none;
 .card {
 
 text-align: center;
-padding: 10px;
+padding: 30px;
 width: 300px;
 border-radius: 5px;
 /* padding: 1em; */
-box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+box-shadow: rgba(213, 65, 65, 0.2) 0px 2px 8px 0px;
 font-size: 14px;
 text-transform: capitalize;
 text-decoration-line: none;
 font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-color: #555;
+color: rgb(0, 0, 0);
 }
 
 .Link {
@@ -65,6 +78,8 @@ width: 300px;
 height: 40px;
 font-size: 20px;
 padding-left: 10px;
+display: grid;
+justify-items: center;
 }
 
 .thumbnail{
